--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Flask==2.3.3
-numpy>=1.24,<1.26
-Pillow==10.0.1
-requests==2.31.0
-matplotlib==3.7.2 
-gunicorn==23.0.0
+numpy
+Pillow
+requests
+matplotlib
+gunicorn
